fixed overflow issue

--- a/assets/css/objects/_cta.scss
+++ b/assets/css/objects/_cta.scss
@@ -9,7 +9,7 @@ padding:0;
 .home.services .cta-wrap {
 position: relative;
 margin-top:20px;
-	left:40px;
+	margin-left:40px;
 }
 }
 
